2008-08-24  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: validation check flag. timing to set
	request-parameters is changed.

2008-08-19  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/version.rb: version 0.0.2.

	* lib/gluon/controller.rb: gluon controller syntax.

2008-08-18  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/rs.rb: class2path with script_name.

2008-08-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: page method.

2008-08-08  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/dispatcher.rb: obsolete.

2008-08-05  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon.rb: URL map is new dispather.

2008-06-09  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb: switch to a controller object.

2008-05-24  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/web/table.rb: table.

2008-05-21  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/renderer.rb: erb proc -> view class.

	* lib/gluon/web/error.rb: error messages.

2008-05-10  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/web/token.rb: one time token for web form.

	* lib/gluon/web.rb: web application components.

	* lib/gluon/action.rb: page check.

	* lib/gluon/nolog.rb: dummy logger.

2008-05-06  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: logging.

2008-05-01  TOKI Yoshinori  <toki@freedom.ne.jp>

	* run/server/gluon.ru: rackup configuration.

2008-04-28  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: parser for request parameters. parser for
	request functions.

2008-03-22  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/builder.rb: auto reload.

2008-03-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb, lib/gluon/builder.rb: cache key. 

2008-03-11  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb, lib/gluon/builder.rb, lib/gluon/po.rb,
	lib/gluon/rs.rb: page cache.

2008-03-06  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/renderer.rb: compile view.
