@@ -1,6 +1,8 @@
 class Example
   class Select
-    def initialize
+    attr_writer :c
+
+    def page_start
       @fruit_list = %w[ apple banana orange ]
       @planet_list = %w[ Mercury Venus Earth Mars Jupiter Saturn Uranus Neptune ]
       @foo = 'apple'
@@ -11,6 +13,12 @@ class Example
     attr_reader :planet_list
     gluon_accessor :foo
     gluon_accessor :bar
+
+    #def page_get
+    #def page_post
+    def page_import
+      @c.validation = true
+    end
 
     def bar_join
       @bar.join(', ')
