@@ -1,7 +1,15 @@
 class Example
   class Submit
-    def initialize
+    attr_writer :c
+
+    def page_start
       @results = ''
+    end
+
+    #def page_get
+    #def page_post
+    def page_import
+      @c.validation = true
     end
 
     def foo
