@@ -1,8 +1,13 @@
 class Example
   class Text
     attr_writer :c
-
     gluon_accessor :foo
+
+    #def page_get
+    #def page_post
+    def page_import
+      @c.validation = true
+    end
 
     def ok
       # nothing to do.
