@@ -1,6 +1,9 @@
 # Welcom application
 
 class Welcom
+  def page_get
+  end
+
   def title
     'Welcom to Gluon'
   end
